# test

./: .clang-tidy  .pre-commit-config.yaml  .releaserc  CPPLINT.cfg  Dockerfile  mypy.ini  pyproject.toml  requirements.sh  ros2.repos  run_clang_tidy.sh  test_linter.cpp
.github/: vortex_auv.repos
.github/workflows/: bandit.yaml  black-formatter.yml  black.yaml  build-test.yaml  ci-build.yaml  ci-docker-build.yaml  ci-pre-commit.yaml  clang-format.yaml  clang-formatter.yaml  clang-formatter.yml  clang-tidy.yaml  codespell.yaml  cpafww.yaml  cpp-lint.yaml  cpp.checks.yaml  docker-build.yaml  docker-publish.yml  flake8-linter.yml  humble-binary-build.yml  industrial-ci.yml  isort.yaml  mypy.yaml  pep8-formatter.yml  post-clang-tidy-review.yaml  pylint.yaml  pytest.yaml  python-checks.yaml  python-format-lint.yaml  reusables-rouce-bilds.yaml  semver.yaml  source-build.yaml  source-build.yml  test.yaml  test1.yaml  test2.yaml  yaml-checks.yaml  yaml-format.yaml
acoustics/acoustics_data_record/: CMakeLists.txt
acoustics/acoustics_data_record/acoustics_data_record/: acoustics_data_record_lib.py  acoustics_data_record_node.py
acoustics/acoustics_data_record/launch/: acoustics_data_record.launch.py
acoustics/acoustics_data_record/utilities/: display_acoustics_data_live.py
acoustics/acoustics_interface/: CMakeLists.txt
acoustics/acoustics_interface/acoustics_interface/: acoustics_interface_lib.py  acoustics_interface_node.py
acoustics/acoustics_interface/launch/: acoustics_interface_launch.py
auv_setup/: CMakeLists.txt
auv_setup/config/robots/: beluga.yaml  manta_enu.yaml  orca.yaml
auv_setup/launch/: orca.launch.py  topside.launch.py
guidance/guidance_los/: CMakeLists.txt  package.xml
mission/LCD/: README
mission/LCD/sources/: IP_lib.py  LCD.py  LCD_lib.py  ip_lib.py  lcd.py  lcd_lib.py  power_sense_module_lib.py  pressure_sensor_lib.py  temperature_sensor_lib.py
mission/LCD/startup_scripts/: LCD.service
mission/blackbox/: CMakeLists.txt  README
mission/blackbox/blackbox/: blackbox_log_data.py  blackbox_node.py
mission/blackbox/launch/: blackbox.launch.py
mission/gui_auv/: package.xml
mission/internal_status_auv/: CMakeLists.txt
mission/internal_status_auv/internal_status_auv/: power_sense_module_lib.py  power_sense_module_node.py  pressure_sensor_lib.py  pressure_sensor_node.py  temperature_sensor_lib.py  temperature_sensor_node.py
mission/internal_status_auv/launch/: internal_status_auv.launch.py
mission/joystick_interface_auv/: CMakeLists.txt
mission/joystick_interface_auv/joystick_interface_auv/: joystick_interface_auv.py
mission/joystick_interface_auv/launch/: joystick_interface_auv.launch.py
mission/joystick_interface_auv/tests/: test_joystick_interface_auv.py
motion/thrust_allocator_auv/: CMakeLists.txt
motion/thrust_allocator_auv/include/thrust_allocator_auv/: eigen_vector6d_typedef.hpp  pseudoinverse_allocator.hpp  thrust_allocator_utils.hpp
motion/thrust_allocator_auv/launch/: thrust_allocator_auv.launch.py
motion/thrust_allocator_auv/src/: pseudoinverse_allocator.cpp  thrust_allocator_auv_node.cpp  thrust_allocator_ros.cpp
motion/thruster_interface_auv/: CMakeLists.txt
motion/thruster_interface_auv/launch/: thruster_interface_auv.launch.py
motion/thruster_interface_auv/src/: thruster_interface_auv_node.cpp
motion/thruster_interface_auv/thruster_interface_auv/: thruster_interface_auv_driver_lib.py  thruster_interface_auv_node.py
motion/thruster_interface_auv_cpp/: CMakeLists.txt
motion/thruster_interface_auv_cpp/src/: thruster_interface_auv_driver.cpp
scripts/: run_clang_tidy.sh
